:bug: Fix car creation, insert car id created in store

--- a/src/components/Header/style.less
+++ b/src/components/Header/style.less
@@ -8,9 +8,9 @@
     display: flex;
     align-items: center;
     .logo {
-      display: block;
-      background-image: url('../../images/logo_contaAzul.png');
-      height: 25px;
+      color: #fff;
+      font-size: 28px;
+      text-decoration: none;
     }
   }
 }
